--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-vue": "2.0.2",
     "node-sass": "4.8.3",
-    "parcel-bundler": "1.7.1",
+    "parcel-bundler": "~> 1.10.0",
     "parcel-plugin-vue": "1.5.0",
     "vue-hot-reload-api": "2.3.0",
     "vue-template-compiler": "2.5.16"
