--- a/package.json
+++ b/package.json
@@ -8,20 +8,15 @@
     "build": "node_modules/.bin/parcel build ./src/index.html"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-vue": "2.0.2",
-    "node-sass": "4.8.3",
-    "parcel-bundler": "~> 1.10.0",
-    "parcel-plugin-vue": "1.5.0",
-    "vue-hot-reload-api": "2.3.0",
-    "vue-template-compiler": "2.5.16"
+    "parcel-bundler": "1.12.0",
+    "sass": "1.17.2",
+    "vue-hot-reload-api": "2.3.3"
   },
   "dependencies": {
     "axios": "0.18.0",
-    "vue": "2.5.16",
-    "vue-router": "3.0.1",
-    "vuetify": "1.0.16",
-    "vuex": "3.0.1"
+    "vue": "2.6.8",
+    "vue-router": "3.0.2",
+    "vuetify": "1.5.5",
+    "vuex": "3.1.0"
   }
 }
