--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "build": "node_modules/.bin/parcel build ./src/index.html"
   },
   "devDependencies": {
-    "parcel-bundler": "1.12.3",
-    "sass": "1.20.3",
-    "vue-hot-reload-api": "2.3.3"
+    "@vue/component-compiler-utils": "3.1.1",
+    "parcel-bundler": "1.12.4",
+    "sass": "1.25.0",
+    "vue-hot-reload-api": "2.3.4",
+    "vue-template-compiler": "2.6.11"
   },
   "dependencies": {
-    "axios": "0.19.0",
-    "vue": "2.6.10",
-    "vue-router": "3.0.6",
-    "vuetify": "1.5.14",
-    "vuex": "3.1.1"
+    "@mdi/font": "4.9.95",
+    "axios": "0.19.2",
+    "vue": "2.6.11",
+    "vue-router": "3.1.5",
+    "vuetify": "2.2.11",
+    "vuex": "3.1.2"
   }
 }
