--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "build": "node_modules/.bin/parcel build ./src/index.html"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "3.1.1",
+    "@vue/component-compiler-utils": "^3.2.0",
     "parcel-bundler": "1.12.4",
-    "sass": "1.25.0",
+    "sass": "^1.29.0",
     "vue-hot-reload-api": "2.3.4",
-    "vue-template-compiler": "2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
-    "@mdi/font": "4.9.95",
-    "axios": "0.19.2",
-    "vue": "2.6.11",
-    "vue-router": "3.1.5",
-    "vuetify": "2.2.11",
-    "vuex": "3.1.2"
+    "@mdi/font": "^5.8.55",
+    "axios": "^0.21.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.3.16",
+    "vuex": "^3.5.1"
   }
 }
